fix: app content not centered

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
 }
 
 .app {
+  margin: auto;
   max-width: 1440px;
   padding: 0 50px;
   font-family: 'Poppins', sans-serif;
